Added buttons for switching between data recording and playback

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\Scripts\PlaybackHandler.cs" />
     <Compile Include="Assets\Scripts\PlaybackStartButton.cs" />
     <Compile Include="Assets\Scripts\PuppetAvatar.cs" />
+    <Compile Include="Assets\Scripts\SceneSwitcher.cs" />
     <Compile Include="Assets\Scripts\SkeletalTrackingProvider.cs" />
     <Compile Include="Assets\Scripts\SkeletonDataText.cs" />
     <Compile Include="Assets\Scripts\StartButton.cs" />
